<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paper_color"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants" >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="0dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" >

        <ImageButton
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imagePoke"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/namePoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAppearance="@style/Platform.MaterialComponents.Light"
            android:textColor="@color/silver_100"
            android:textSize="25sp"
            android:textStyle="bold"
            android:maxLines="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/typesView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/namePoke"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="none"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/type_item"/>

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namePoke"
            android:layout_marginTop="75dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/silver_100" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namePoke"
            android:layout_marginTop="75dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/silver_100" />

        <TextView
            android:id="@+id/weightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/weight"
            android:textColor="@color/silver"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/heightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/height"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/height"
            android:textColor="@color/silver"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/basePerformance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weightTitle"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/base_stats"
            android:textColor="@color/silver_100"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layoutHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/basePerformance"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hp"
                android:textColor="@color/silver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_hp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                app:progressView_animation="bounce"
                app:progressView_colorBackground="@color/progress_background"
                app:progressView_colorProgress="@color/progress_hp"
                app:progressView_labelColorInner="@color/black"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="18sp"
                app:progressView_labelTypeface="italic"
                app:progressView_radius="15dp"
                app:progressView_max="300" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutATK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/layoutHP"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/atk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/atk"
                android:textColor="@color/silver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_atk"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                app:progressView_animation="bounce"
                app:progressView_colorBackground="@color/progress_background"
                app:progressView_colorProgress="@color/progress_atk"
                app:progressView_labelColorInner="@color/black"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="18sp"
                app:progressView_labelTypeface="italic"
                app:progressView_radius="15dp"
                app:progressView_max="300" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutDEF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/layoutATK"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/def"
                android:textColor="@color/silver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_def"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                app:progressView_animation="bounce"
                app:progressView_colorBackground="@color/progress_background"
                app:progressView_colorProgress="@color/progress_def"
                app:progressView_labelColorInner="@color/black"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="18sp"
                app:progressView_labelTypeface="italic"
                app:progressView_radius="15dp"
                app:progressView_max="300" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutSPD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/layoutDEF"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/spd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/spd"
                android:textColor="@color/silver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_spd"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                app:progressView_animation="bounce"
                app:progressView_colorBackground="@color/progress_background"
                app:progressView_colorProgress="@color/progress_spd"
                app:progressView_labelColorInner="@color/black"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="18sp"
                app:progressView_labelTypeface="italic"
                app:progressView_radius="15dp"
                app:progressView_max="300" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutEXP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/layoutSPD"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/exp"
                android:textColor="@color/silver"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_exp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                app:progressView_animation="bounce"
                app:progressView_colorBackground="@color/progress_background"
                app:progressView_colorProgress="@color/progress_exp"
                app:progressView_labelColorInner="@color/black"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="18sp"
                app:progressView_labelTypeface="italic"
                app:progressView_radius="15dp"
                app:progressView_max="1000" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>